fix: text overflow

--- a/src/widgets/RecomendationWidget/index.scss
+++ b/src/widgets/RecomendationWidget/index.scss
@@ -43,6 +43,9 @@
       p {
         font-size: 15px;
         font-weight: 600;
+        margin-bottom: 0;
+        overflow: hidden;
+        height: 48px;
       }
     }
   }
